--- a/src/main/resources/templates/reunion-infos.html
+++ b/src/main/resources/templates/reunion-infos.html
@@ -22,6 +22,7 @@
 
 	<div class="row">
 		<div class="col-md-1">
+
 		</div>
 		<div class="col-md-10">
 		
@@ -37,7 +38,12 @@
   <div th:each="r: ${reusofday}" class="btn-group mr-2" role="group" aria-label="First group">
     <a th:href="@{/reunion-infos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${r})}"><button type="button" th:text="${r}" class="btn btn-primary"></button></a>
   </div>
-</div>       
+</div>  
+
+<div style="border: 3px solid red; width: 220px; padding: 10px; margin-bottom: 5px;">
+<h5 style="border-bottom: 1px solid black; padding-bottom: 2px;">Cracks du jour R[[${reunionstring}]] (+75%):</h5>
+  <p th:each="c : ${cracklist}"><strong th:if="${c.numero lt 10}">[[${c.C}]]0[[${c.numero}]] </strong><strong th:if="${c.numero gt 9}">[[${c.C}]][[${c.numero}]] </strong> ([[${c.noteProno}]] pts)</p>
+</div>      
        
 <!-- <div style="text-align: center;" class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups"> -->
 <!--   <div th:each="r: ${reusofday}" class="btn-group mr-2" role="group" aria-label="First group"> -->
