--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -120,7 +120,7 @@ table{
 #info div{
     float: left;
     line-height: 22px;
-/*     margin-right: 6px; */
+    margin-right: 6px;
     
 }
 .clear{
